# hackathon1

./: .gitignore  .lighthouserc.js  CONTRIBUTING.md  DEPLOYMENT_QUICKSTART.md  DEPLOY_NOW.md  FRONTEND_BACKEND_INTEGRATION_COMPLETE.md  Makefile  PRODUCTION_DEPLOYMENT_GUIDE.md  QUICK_START_GUIDE.md  RAG_IMPLEMENTATION_SUMMARY.md  RAG_VALIDATION_CHECKLIST.md  README.md  STRUCTURE_VALIDATION.md  docusaurus.config.ts  package-lock.json  package.json  playwright.config.js
.claude/: settings.local.json
backend/: .dockerignore  .env.example  Dockerfile  QUICK_START_RAG.md  README.md  TESTING_SUMMARY.md  VALIDATION_REPORT.md  alembic.ini  fly.toml  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  run_tests.py  test_integration.py  test_rag_pipeline.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/routes/: __init__.py  chat.py  documents.py  health.py  search.py
backend/app/core/: config.py  security.py
backend/app/models/: __init__.py  database.py  schemas.py
backend/app/services/: __init__.py  embeddings.py  rag.py  retrieval.py  storage.py
backend/app/utils/: __init__.py  chunking.py  logging.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_schema.py
backend/scripts/: ingest_documents.py  init_db.py  validate_setup.py
backend/tests/: __init__.py  conftest.py  test_performance.py
backend/tests/test_api/: __init__.py  test_chat.py  test_health.py
backend/tests/test_services/: test_chunking.py  test_embeddings.py  test_rag.py  test_retrieval.py  test_storage.py
(+166 files in other folders)
